--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,9 @@ AllCops:
     - 'bin/*'
     - 'db/schema.rb'
 
+Layout/ArgumentAlignment:
+  EnforcedStyle: with_fixed_indentation
+
 Layout/FirstArrayElementIndentation:
   EnforcedStyle: consistent
 
