--- a/package.json
+++ b/package.json
@@ -50,12 +50,15 @@
     "@apollo/client": "^3.7.11",
     "@radix-ui/colors": "^0.1.8",
     "@vitejs/plugin-react": "^3.1.0",
+    "@xstate/react": "^3.2.1",
     "clsx": "^1.2.1",
+    "framer-motion": "^10.10.0",
     "graphql": "^16.6.0",
     "lodash-es": "^4.17.21",
     "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "xstate": "^4.37.1"
   }
 }
