--- a/package.json
+++ b/package.json
@@ -5,15 +5,25 @@
   "license": "MIT",
   "scripts": {
     "codegen": "graphql-codegen --config codegen.ts",
-    "types": "bundle exec rails graphql:schema:dump && yarn codegen"
+    "types": "bundle exec rails graphql:schema:dump && yarn codegen",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
     "@graphql-codegen/add": "^4.0.1",
     "@graphql-codegen/cli": "3.2.2",
     "@graphql-codegen/client-preset": "2.1.1",
     "@graphql-codegen/typescript": "^3.0.2",
     "@graphql-codegen/typescript-operations": "^3.0.2",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@storybook/addon-essentials": "^7.0.2",
+    "@storybook/addon-interactions": "^7.0.2",
+    "@storybook/addon-links": "^7.0.2",
+    "@storybook/blocks": "^7.0.2",
+    "@storybook/react": "^7.0.2",
+    "@storybook/react-vite": "^7.0.2",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@thx/graphql-typescript-scalar-type-policies": "^2.0.0",
     "@types/lodash-es": "^4.17.7",
     "@types/luxon": "^3.2.0",
@@ -26,6 +36,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.11",
+    "graphql-tag": "^2.0.0",
     "postcss": "^8.4.21",
     "postcss-combine-duplicated-selectors": "^10.0.3",
     "postcss-custom-media": "^9.1.2",
@@ -34,6 +46,8 @@
     "postcss-jit-props": "^1.0.13",
     "postcss-nested": "^6.0.1",
     "prettier": "^2.8.7",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.0.2",
     "typescript": "^5.0.3",
     "vite": "^4.2.1",
     "vite-plugin-fonts": "^0.7.0",
