--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "types": "bundle exec rails graphql:schema:dump && yarn codegen",
     "storybook": "STORYBOOK=1 storybook dev -p 6006",
     "build-storybook": "STORYBOOK=1 storybook build",
-    "test": "vitest"
+    "test": "vitest",
+    "new": "hygen new component"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
@@ -34,6 +35,7 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
+    "canvas": "^2.11.2",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.4",
@@ -44,6 +46,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.11",
     "graphql-tag": "^2.0.0",
+    "hygen": "^6.2.11",
     "jsdom": "^21.1.1",
     "postcss": "^8.4.21",
     "postcss-combine-duplicated-selectors": "^10.0.3",
@@ -70,6 +73,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.11",
+    "@floating-ui/react": "^0.22.3",
     "@radix-ui/colors": "^0.1.8",
     "@vitejs/plugin-react": "^3.1.0",
     "@xstate/react": "^3.2.1",
