--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "codegen": "graphql-codegen --config codegen.ts",
+    "contentful": "graphql-codegen --config contentful.ts",
     "types": "bundle exec rails graphql:schema:dump && yarn codegen",
     "storybook": "STORYBOOK=1 storybook dev -p 6006",
     "build-storybook": "STORYBOOK=1 storybook build",
@@ -13,6 +14,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
+    "@contentful/rich-text-types": "^16.0.3",
     "@graphql-codegen/add": "^4.0.1",
     "@graphql-codegen/cli": "3.2.2",
     "@graphql-codegen/client-preset": "2.1.1",
@@ -73,6 +75,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.11",
+    "@contentful/rich-text-react-renderer": "^15.16.3",
     "@floating-ui/react": "^0.22.3",
     "@radix-ui/colors": "^0.1.8",
     "@vitejs/plugin-react": "^3.1.0",
