--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-merge-refs": "^2.0.1",
+    "react-router-dom": "^6.10.0",
     "usehooks-ts": "^2.9.1",
     "xstate": "^4.37.1"
   }
