--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "@graphql-codegen/typescript-operations": "^3.0.2",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@ngneat/falso": "^6.4.0",
-    "@storybook/addon-essentials": "^7.0.2",
-    "@storybook/addon-interactions": "^7.0.2",
-    "@storybook/addon-links": "^7.0.2",
-    "@storybook/blocks": "^7.0.2",
-    "@storybook/react": "^7.0.2",
-    "@storybook/react-vite": "^7.0.2",
+    "@storybook/addon-essentials": "^7.0.5",
+    "@storybook/addon-interactions": "^7.0.5",
+    "@storybook/addon-links": "^7.0.5",
+    "@storybook/blocks": "^7.0.5",
+    "@storybook/manager-api": "^7.0.5",
+    "@storybook/react": "^7.0.5",
+    "@storybook/react-vite": "^7.0.5",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/theming": "^7.0.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@thx/graphql-typescript-scalar-type-policies": "^2.0.0",
@@ -61,7 +63,8 @@
     "prettier": "^2.8.7",
     "prop-types": "^15.8.1",
     "resize-observer-polyfill": "^1.5.1",
-    "storybook": "^7.0.2",
+    "storybook": "^7.0.5",
+    "storybook-dark-mode": "^3.0.0",
     "stylelint": "^15.4.0",
     "stylelint-config-hudochenkov": "^9.0.0",
     "stylelint-config-standard": "^32.0.0",
