--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "stylelint-order": "^6.0.3",
     "stylelint-use-nesting": "^4.1.0",
     "typescript": "^5.0.3",
+    "unplugin-fonts": "^1.0.3",
     "vite": "^4.2.1",
     "vite-plugin-fonts": "^0.7.0",
     "vite-plugin-ruby": "^3.2.1",
@@ -95,6 +96,7 @@
     "react-merge-refs": "^2.0.1",
     "react-router-dom": "^6.10.0",
     "usehooks-ts": "^2.9.1",
-    "xstate": "^4.37.1"
+    "xstate": "^4.37.1",
+    "zod": "^3.21.4"
   }
 }
