--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@apollo/client": "^3.7.11",
     "@contentful/rich-text-react-renderer": "^15.16.3",
     "@floating-ui/react": "^0.22.3",
+    "@georgedoescode/spline": "^1.0.1",
     "@radix-ui/colors": "^0.1.8",
     "@vitejs/plugin-react": "^3.1.0",
     "@xstate/react": "^3.2.1",
@@ -95,6 +96,7 @@
     "react-dom": "^18.2.0",
     "react-merge-refs": "^2.0.1",
     "react-router-dom": "^6.10.0",
+    "simplex-noise": "^4.0.1",
     "usehooks-ts": "^2.9.1",
     "xstate": "^4.37.1",
     "zod": "^3.21.4"
