--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "@floating-ui/react": "^0.22.3",
     "@georgedoescode/spline": "^1.0.1",
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-toggle-group": "^1.0.3",
     "@vitejs/plugin-react": "^3.1.0",
     "@xstate/react": "^3.2.1",
     "clsx": "^1.2.1",
