--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -42,6 +42,10 @@ Layout/LineLength:
   Max: 100
   AllowedPatterns: ['\A\s*#']
 
+Lint/AmbiguousBlockAssociation:
+  Exclude:
+    - 'spec/**/*'
+
 Layout/MultilineMethodCallIndentation:
   EnforcedStyle: indented
 
