--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@thx/graphql-typescript-scalar-type-policies": "^2.0.0",
     "@types/lodash-es": "^4.17.7",
     "@types/luxon": "^3.2.0",
+    "@types/pluralize": "^0.0.29",
     "@types/react": "^18.0.32",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
@@ -92,6 +93,7 @@
     "graphql": "^16.6.0",
     "lodash-es": "^4.17.21",
     "luxon": "^3.3.0",
+    "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-balanced": "^0.0.1",
     "react-dom": "^18.2.0",
