--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@contentful/rich-text-react-renderer": "^15.16.3",
     "@floating-ui/react": "^0.22.3",
     "@georgedoescode/spline": "^1.0.1",
+    "@hookform/resolvers": "^3.1.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-toggle-group": "^1.0.3",
     "@vitejs/plugin-react": "^3.1.0",
@@ -97,6 +98,7 @@
     "react": "^18.2.0",
     "react-balanced": "^0.0.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-merge-refs": "^2.0.1",
     "react-router-dom": "^6.10.0",
     "simplex-noise": "^4.0.1",
