--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-toggle-group": "^1.0.3",
+    "@tanstack/react-table": "^8.9.1",
     "@vitejs/plugin-react": "^3.1.0",
     "@xstate/react": "^3.2.1",
     "clsx": "^1.2.1",
