--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
+      "@config/*": ["./config/*"],
       "@/*": ["./app/frontend/*"]
     },
     "types": ["@modyfi/vite-plugin-yaml/modules"]
