--- a/package.json
+++ b/package.json
@@ -89,9 +89,11 @@
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.3",
+    "@tanstack/react-query": "^4.29.7",
     "@tanstack/react-table": "^8.9.1",
     "@vitejs/plugin-react": "^3.1.0",
     "@xstate/react": "^3.2.1",
+    "apollo-upload-client": "^17.0.0",
     "clsx": "^1.2.1",
     "framer-motion": "^10.12.8",
     "graphql": "^16.6.0",
