--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -75,6 +75,9 @@ RSpec/MultipleMemoizedHelpers:
 RSpec/MultipleSubjects:
   Enabled: false
 
+RSpec/NamedSubject:
+  Enabled: false
+
 RSpec/NestedGroups:
   Max: 5
 
