--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "@xstate/react": "^3.2.1",
     "apollo-upload-client": "^17.0.0",
     "clsx": "^1.2.1",
-    "framer-motion": "^10.12.8",
+    "framer-motion": "10.12.7",
     "graphql": "^16.6.0",
     "lodash-es": "^4.17.21",
     "luxon": "^3.3.0",
