--- a/package.json
+++ b/package.json
@@ -77,8 +77,7 @@
     "vite": "^4.2.1",
     "vite-plugin-fonts": "^0.7.0",
     "vite-plugin-ruby": "^3.2.1",
-    "vitest": "^0.29.8",
-    "vitest-axe": "^0.1.0"
+    "vitest": "^0.29.8"
   },
   "dependencies": {
     "@apollo/client": "^3.7.11",
