--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -27,11 +27,11 @@
           "type": "at-rule",
           "name": "supports"
         },
+        "rules",
         {
           "type": "at-rule",
           "name": "media"
-        },
-        "rules"
+        }
       ],
       { "severity": "warning" }
     ]
