--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "clsx": "^1.2.1",
     "framer-motion": "10.12.7",
     "graphql": "^16.6.0",
+    "hashids": "^2.3.0",
     "lodash-es": "^4.17.21",
     "luxon": "^3.3.0",
     "pluralize": "^8.0.0",
