--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "@xstate/react": "^3.2.1",
     "apollo-upload-client": "^17.0.0",
+    "blurhash": "^2.0.5",
     "clsx": "^1.2.1",
     "framer-motion": "10.12.7",
     "graphql": "^16.6.0",
@@ -104,6 +105,7 @@
     "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-balanced": "^0.0.1",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-merge-refs": "^2.0.1",
