--- a/package.json
+++ b/package.json
@@ -108,8 +108,10 @@
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-markdown": "^8.0.7",
     "react-merge-refs": "^2.0.1",
     "react-router-dom": "^6.10.0",
+    "remark-smartypants": "^2.0.0",
     "simplex-noise": "^4.0.1",
     "usehooks-ts": "^2.9.1",
     "xstate": "^4.37.1",
