--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.11",
+    "fishery": "^2.2.2",
     "graphql-tag": "^2.0.0",
     "hygen": "^6.2.11",
+    "intersection-observer": "^0.12.2",
     "jsdom": "^21.1.1",
     "postcss": "^8.4.21",
     "postcss-combine-duplicated-selectors": "^10.0.3",
@@ -114,6 +116,7 @@
     "remark-smartypants": "^2.0.0",
     "simplex-noise": "^4.0.1",
     "usehooks-ts": "^2.9.1",
+    "utility-types": "^3.10.0",
     "xstate": "^4.37.1",
     "zod": "^3.21.4"
   }
