--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "react": "^18.2.0",
     "react-balanced": "^0.0.1",
     "react-blurhash": "^0.3.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-markdown": "^8.0.7",
