--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.11",
+    "@chakra-ui/portal": "^2.0.16",
     "@contentful/rich-text-react-renderer": "^15.16.3",
     "@ctrl/tinycolor": "^3.6.0",
     "@floating-ui/react": "^0.22.3",
@@ -113,6 +114,7 @@
     "react-hook-form": "^7.43.9",
     "react-markdown": "^8.0.7",
     "react-merge-refs": "^2.0.1",
+    "react-remove-scroll": "^2.5.6",
     "react-router-dom": "^6.10.0",
     "remark-smartypants": "^2.0.0",
     "simplex-noise": "^4.0.1",
