--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "react-merge-refs": "^2.0.1",
     "react-remove-scroll": "^2.5.6",
     "react-router-dom": "^6.10.0",
+    "react-router-typesafe-routes": "^1.2.1",
     "remark-smartypants": "^2.0.0",
     "simplex-noise": "^4.0.1",
     "usehooks-ts": "^2.9.1",
