--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,12 @@
     "types": ["@modyfi/vite-plugin-yaml/modules", "@testing-library/jest-dom"]
   },
   "include": ["./app/frontend", "./config/roles.yml"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "ts-node": {
+    "esm": true,
+    "compilerOptions": {
+      "module": "nodenext",
+      "esModuleInterop": true
+    }
+  }
 }
