--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/pluralize": "^0.0.29",
     "@types/react": "^18.0.32",
     "@types/react-dom": "^18.0.11",
+    "@types/tinycolor2": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "canvas": "^2.11.2",
@@ -119,6 +120,7 @@
     "react-router-typesafe-routes": "^1.2.1",
     "remark-smartypants": "^2.0.0",
     "simplex-noise": "^4.0.1",
+    "tinycolor2": "^1.6.0",
     "usehooks-ts": "^2.9.1",
     "utility-types": "^3.10.0",
     "xstate": "^4.37.1",
