--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,6 +6,14 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+digitalocean:
+  service: S3
+  access_key_id: <%= Rails.application.credentials.dig(:storage, :key) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:storage, :secret) %>
+  region: us-east-1
+  force_path_style: false
+  bucket: nzif
+#
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
