--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "react-blurhash": "^0.3.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.9",
     "react-markdown": "^8.0.7",
     "react-merge-refs": "^2.0.1",
