--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -50,6 +50,7 @@ Layout/MultilineMethodCallIndentation:
   EnforcedStyle: indented
 
 Metrics/AbcSize:
+  Max: 20
   Exclude:
     - 'db/migrate/*'
 
