admin registrations view

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/lodash-es": "^4.17.7",
     "@types/luxon": "^3.2.0",
     "@types/pluralize": "^0.0.29",
+    "@types/rails__actioncable": "^6.1.6",
     "@types/react": "^18.0.32",
     "@types/react-dom": "^18.0.11",
     "@types/tinycolor2": "^1.4.3",
@@ -94,6 +95,7 @@
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.3",
+    "@rails/actioncable": "^7.0.6",
     "@tanstack/react-query": "^4.29.7",
     "@tanstack/react-table": "^8.9.1",
     "@vitejs/plugin-react": "^3.1.0",
@@ -103,6 +105,7 @@
     "clsx": "^1.2.1",
     "framer-motion": "10.12.7",
     "graphql": "^16.6.0",
+    "graphql-ruby-client": "^1.11.8",
     "hashids": "^2.3.0",
     "lodash-es": "^4.17.21",
     "luxon": "^3.3.0",
