--- a/package.json
+++ b/package.json
@@ -98,6 +98,16 @@
     "@rails/actioncable": "^7.0.6",
     "@tanstack/react-query": "^4.29.7",
     "@tanstack/react-table": "^8.9.1",
+    "@visx/axis": "^3.3.0",
+    "@visx/grid": "^3.3.0",
+    "@visx/group": "^3.3.0",
+    "@visx/legend": "^3.3.0",
+    "@visx/mock-data": "^3.3.0",
+    "@visx/responsive": "^3.3.0",
+    "@visx/scale": "^3.3.0",
+    "@visx/shape": "^3.3.0",
+    "@visx/tooltip": "^3.3.0",
+    "@visx/vendor": "^3.3.0",
     "@vitejs/plugin-react": "^3.1.0",
     "@xstate/react": "^3.2.1",
     "apollo-upload-client": "^17.0.0",
