start allocation UI

--- a/package.json
+++ b/package.json
@@ -89,6 +89,9 @@
     "@chakra-ui/portal": "^2.0.16",
     "@contentful/rich-text-react-renderer": "^15.16.3",
     "@ctrl/tinycolor": "^3.6.0",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.1",
+    "@dnd-kit/sortable": "^7.0.2",
     "@floating-ui/react": "^0.22.3",
     "@formatjs/intl-numberformat": "^8.7.0",
     "@georgedoescode/spline": "^1.0.1",
