--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/luxon": "^3.2.0",
     "@types/pluralize": "^0.0.29",
     "@types/rails__actioncable": "^6.1.6",
+    "@types/raygun4js": "^2.13.8",
     "@types/react": "^18.0.32",
     "@types/react-dom": "^18.0.11",
     "@types/tinycolor2": "^1.4.3",
@@ -124,6 +125,7 @@
     "lodash-es": "^4.17.21",
     "luxon": "^3.3.0",
     "pluralize": "^8.0.0",
+    "raygun4js": "^2.27.0",
     "react": "^18.2.0",
     "react-balanced": "^0.0.1",
     "react-blurhash": "^0.3.0",
