--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@modyfi/vite-plugin-yaml": "^1.0.4",
     "@ngneat/falso": "^6.4.0",
-    "@storybook/addon-essentials": "^7.3.2",
-    "@storybook/addon-interactions": "^7.3.2",
-    "@storybook/addon-links": "^7.3.2",
-    "@storybook/blocks": "^7.3.2",
-    "@storybook/manager-api": "^7.3.2",
-    "@storybook/react": "^7.3.2",
-    "@storybook/react-vite": "^7.3.2",
+    "@storybook/addon-essentials": "^7.4.0",
+    "@storybook/addon-interactions": "^7.4.0",
+    "@storybook/addon-links": "^7.4.0",
+    "@storybook/blocks": "^7.4.0",
+    "@storybook/manager-api": "^7.4.0",
+    "@storybook/react": "^7.4.0",
+    "@storybook/react-vite": "^7.4.0",
     "@storybook/testing-library": "^0.2.0",
-    "@storybook/theming": "^7.3.2",
+    "@storybook/theming": "^7.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -72,7 +72,7 @@
     "prettier": "^2.8.7",
     "prop-types": "^15.8.1",
     "resize-observer-polyfill": "^1.5.1",
-    "storybook": "^7.3.2",
+    "storybook": "^7.4.0",
     "storybook-dark-mode": "^3.0.1",
     "stylelint": "^15.4.0",
     "stylelint-config-hudochenkov": "^9.0.0",
@@ -148,5 +148,8 @@
     "utility-types": "^3.10.0",
     "xstate": "^4.37.1",
     "zod": "^3.21.4"
+  },
+  "resolutions": {
+    "@storybook/addons/@storybook/types": "^7.4.0"
   }
 }
