--- a/config/permissions.yml
+++ b/config/permissions.yml
@@ -19,3 +19,5 @@ admin:
       description: Manage registrations
     content:
       description: Manage content
+    payments:
+      description: Manage payments
