separate manifest for the directory

--- a/public/directory-manifest.json
+++ b/public/directory-manifest.json
@@ -4,10 +4,10 @@
   "short_name": "NZIF",
   "theme_color": "#D74C81",
   "background_color": "#FFFFFF",
-  "display": "standalone",
-  "display_override": ["standalone"],
+  "display": "fullscreen",
+  "display_override": ["fullscreen", "standalone"],
   "scope": "./",
-  "start_url": "./",
+  "start_url": "./directory",
   "icons": [
     {
       "src": "icons/icon-72x72.png",
