--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -50,9 +50,7 @@ Layout/MultilineMethodCallIndentation:
   EnforcedStyle: indented
 
 Metrics/AbcSize:
-  Max: 20
-  Exclude:
-    - 'db/migrate/*'
+  Enabled: false
 
 Metrics/BlockLength:
   Exclude:
