--- a/biome.json
+++ b/biome.json
@@ -31,7 +31,8 @@
       "recommended": true,
       "a11y": {
         "noRedundantAlt": "off",
-        "useKeyWithClickEvents": "off"
+        "useKeyWithClickEvents": "off",
+        "useValidAnchor": "off"
       },
       "correctness": {
         "useExhaustiveDependencies": "off"
@@ -42,6 +43,6 @@
     }
   },
   "files": {
-    "ignore": ["*.typegen.ts"]
+    "ignore": ["*.typegen.ts", "*.gen.ts"]
   }
 }
