--- a/package.json
+++ b/package.json
@@ -97,7 +97,10 @@
     "@stripe/react-stripe-js": "^2.1.2",
     "@stripe/stripe-js": "^2.1.1",
     "@tanstack/react-query": "^4.29.7",
+    "@tanstack/react-router": "^1.16.6",
     "@tanstack/react-table": "^8.9.1",
+    "@tanstack/router-devtools": "^1.16.6",
+    "@tanstack/router-vite-plugin": "^1.16.5",
     "@visx/axis": "^3.3.0",
     "@visx/grid": "^3.3.0",
     "@visx/group": "^3.3.0",
