--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
+    "@0no-co/graphqlsp": "^1.4.1",
     "@babel/core": "^7.0.0-0",
     "@biomejs/biome": "1.5.3",
     "@cicadahq/cicada": "^0.1.50",
@@ -96,11 +97,13 @@
     "@rails/actioncable": "^7.0.6",
     "@stripe/react-stripe-js": "^2.1.2",
     "@stripe/stripe-js": "^2.1.1",
+    "@tanstack/react-form": "^0.13.6",
     "@tanstack/react-query": "^4.29.7",
     "@tanstack/react-router": "^1.16.6",
     "@tanstack/react-table": "^8.9.1",
     "@tanstack/router-devtools": "^1.16.6",
     "@tanstack/router-vite-plugin": "^1.16.5",
+    "@tanstack/zod-form-adapter": "^0.13.6",
     "@visx/axis": "^3.3.0",
     "@visx/grid": "^3.3.0",
     "@visx/group": "^3.3.0",
@@ -117,6 +120,7 @@
     "blurhash": "^2.0.5",
     "clsx": "^1.2.1",
     "framer-motion": "10.12.7",
+    "gql.tada": "^1.2.1",
     "graphql": "^16.6.0",
     "graphql-ruby-client": "^1.11.8",
     "hashids": "^2.3.0",
