--- a/package.json
+++ b/package.json
@@ -55,13 +55,15 @@
     "hygen": "^6.2.11",
     "intersection-observer": "^0.12.2",
     "jsdom": "^21.1.1",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.27",
     "postcss-combine-duplicated-selectors": "^10.0.3",
     "postcss-custom-media": "^9.1.2",
     "postcss-import": "^15.1.0",
     "postcss-import-ext-glob": "^2.1.1",
     "postcss-jit-props": "^1.0.13",
     "postcss-nested": "^6.0.1",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^2.8.7",
     "prop-types": "^15.8.1",
     "resize-observer-polyfill": "^1.5.1",
@@ -91,6 +93,11 @@
     "@formatjs/intl-numberformat": "^8.7.0",
     "@georgedoescode/spline": "^1.0.1",
     "@hookform/resolvers": "^3.1.0",
+    "@mantine/core": "^7.5.3",
+    "@mantine/dates": "^7.5.3",
+    "@mantine/hooks": "^7.5.3",
+    "@mantine/modals": "^7.5.3",
+    "@mantine/notifications": "^7.5.3",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.3",
@@ -119,11 +126,13 @@
     "apollo-upload-client": "^17.0.0",
     "blurhash": "^2.0.5",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.10",
     "framer-motion": "10.12.7",
     "gql.tada": "^1.2.1",
     "graphql": "^16.6.0",
     "graphql-ruby-client": "^1.11.8",
     "hashids": "^2.3.0",
+    "initials": "^3.1.2",
     "lodash-es": "^4.17.21",
     "luxon": "^3.3.0",
     "pluralize": "^8.0.0",
