--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "postcss": "^8.4.27",
     "postcss-combine-duplicated-selectors": "^10.0.3",
     "postcss-custom-media": "^9.1.2",
+    "postcss-for": "^2.1.1",
     "postcss-import": "^15.1.0",
     "postcss-import-ext-glob": "^2.1.1",
     "postcss-jit-props": "^1.0.13",
@@ -127,7 +128,7 @@
     "blurhash": "^2.0.5",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.10",
-    "framer-motion": "10.12.7",
+    "framer-motion": "11.0.6",
     "gql.tada": "^1.2.1",
     "graphql": "^16.6.0",
     "graphql-ruby-client": "^1.11.8",
