--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -15,6 +15,7 @@
     ],
     "alpha-value-notation": null,
     "hue-degree-notation": null,
+    "media-feature-range-notation": null,
     "custom-property-empty-line-before": null,
     "order/order": [
       [
