--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "noErrorTruncation": true,
     "jsx": "react-jsx",
     "paths": {
       "@config/*": ["./config/*"],
@@ -26,6 +27,7 @@
         "schema": "./app/frontend/graphql/schema.graphql",
         "tadaOutputLocation": "./app/frontend/graphql/graphql-env.d.ts",
         "trackFieldUsage": false,
+        "shouldCheckForColocatedFragments": false
       }
     ]
   },
