--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@mantine/hooks": "^7.6.1",
     "@mantine/modals": "^7.6.1",
     "@mantine/notifications": "^7.6.1",
+    "@million/lint": "^0.0.73",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.3",
