--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "@stripe/stripe-js": "^2.1.1",
     "@tanstack/react-form": "^0.20.0",
     "@tanstack/react-query": "^4.29.7",
-    "@tanstack/react-router": "^1.33.8",
+    "@tanstack/react-router": "1.32.0",
     "@tanstack/react-table": "^8.9.1",
     "@tanstack/router-devtools": "^1.16.6",
     "@tanstack/router-vite-plugin": "^1.16.5",
