--- a/package.json
+++ b/package.json
@@ -95,11 +95,17 @@
     "@formatjs/intl-numberformat": "^8.7.0",
     "@georgedoescode/spline": "^1.0.1",
     "@hookform/resolvers": "^3.1.0",
-    "@mantine/core": "^7.10.0",
-    "@mantine/dates": "^7.10.0",
-    "@mantine/hooks": "^7.10.0",
-    "@mantine/modals": "^7.10.0",
-    "@mantine/notifications": "^7.10.0",
+    "@lexical/link": "^0.15.0",
+    "@lexical/list": "^0.15.0",
+    "@lexical/markdown": "^0.15.0",
+    "@lexical/react": "^0.15.0",
+    "@lexical/rich-text": "^0.15.0",
+    "@lexical/utils": "^0.15.0",
+    "@mantine/core": "^7.10.1",
+    "@mantine/dates": "^7.10.1",
+    "@mantine/hooks": "^7.10.1",
+    "@mantine/modals": "^7.10.1",
+    "@mantine/notifications": "^7.10.1",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.3",
@@ -135,6 +141,7 @@
     "graphql-ruby-client": "^1.11.8",
     "hashids": "^2.3.0",
     "initials": "^3.1.2",
+    "lexical": "^0.15.0",
     "lodash-es": "^4.17.21",
     "luxon": "^3.3.0",
     "pluralize": "^8.0.0",
