--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@lexical/markdown": "^0.15.0",
     "@lexical/react": "^0.15.0",
     "@lexical/rich-text": "^0.15.0",
+    "@lexical/selection": "^0.15.0",
     "@lexical/utils": "^0.15.0",
     "@mantine/core": "^7.10.1",
     "@mantine/dates": "^7.10.1",
