--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "codegen": "graphql-codegen --config codegen.ts",
     "contentful": "graphql-codegen --config contentful.ts",
     "schema": "bundle exec rails graphql:schema:dump",
-    "types": "schema && codegen",
+    "types": "pnpm schema && pnpm codegen",
     "storybook": "STORYBOOK=1 storybook dev -p 6006",
     "build-storybook": "STORYBOOK=1 storybook build",
     "test": "vitest",
@@ -120,6 +120,8 @@
     "@tanstack/router-devtools": "^1.16.6",
     "@tanstack/router-vite-plugin": "^1.34.1",
     "@tanstack/zod-form-adapter": "^0.13.6",
+    "@uppy/aws-s3": "^3.6.2",
+    "@uppy/core": "^3.12.0",
     "@visx/axis": "^3.3.0",
     "@visx/grid": "^3.3.0",
     "@visx/group": "^3.3.0",
