--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@thx/graphql-typescript-scalar-type-policies": "^2.0.0",
+    "@types/country-list": "^2.1.4",
     "@types/lodash-es": "^4.17.7",
     "@types/luxon": "^3.2.0",
     "@types/pluralize": "^0.0.29",
@@ -94,14 +95,15 @@
     "@floating-ui/react": "^0.22.3",
     "@formatjs/intl-numberformat": "^8.7.0",
     "@georgedoescode/spline": "^1.0.1",
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@hookform/resolvers": "^3.1.0",
-    "@lexical/link": "^0.15.0",
-    "@lexical/list": "^0.15.0",
-    "@lexical/markdown": "^0.15.0",
-    "@lexical/react": "^0.15.0",
-    "@lexical/rich-text": "^0.15.0",
-    "@lexical/selection": "^0.15.0",
-    "@lexical/utils": "^0.15.0",
+    "@lexical/link": "^0.16.0",
+    "@lexical/list": "^0.16.0",
+    "@lexical/markdown": "^0.16.0",
+    "@lexical/react": "^0.16.0",
+    "@lexical/rich-text": "^0.16.0",
+    "@lexical/selection": "^0.16.0",
+    "@lexical/utils": "^0.16.0",
     "@mantine/core": "^7.10.1",
     "@mantine/dates": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
@@ -137,6 +139,7 @@
     "apollo-upload-client": "^17.0.0",
     "blurhash": "^2.0.5",
     "clsx": "^1.2.1",
+    "country-list": "^2.3.0",
     "dayjs": "^1.11.10",
     "framer-motion": "11.0.6",
     "gql.tada": "^1.7.5",
@@ -144,7 +147,7 @@
     "graphql-ruby-client": "^1.11.8",
     "hashids": "^2.3.0",
     "initials": "^3.1.2",
-    "lexical": "^0.15.0",
+    "lexical": "^0.16.0",
     "lodash-es": "^4.17.21",
     "luxon": "^3.3.0",
     "pluralize": "^8.0.0",
