--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "author": "Matt Powell <fauxparse@gmail.com>",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "codegen": "graphql-codegen --config codegen.ts",
     "contentful": "graphql-codegen --config contentful.ts",
@@ -38,6 +39,7 @@
     "@storybook/react-vite": "^7.6.19",
     "@storybook/testing-library": "^0.2.0",
     "@storybook/theming": "^7.6.16",
+    "@tanstack/router-plugin": "^1.39.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -51,6 +53,7 @@
     "@types/react": "^18.0.32",
     "@types/react-dom": "^18.0.11",
     "@types/tinycolor2": "^1.4.3",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "canvas": "^2.11.2",
     "fishery": "^2.2.2",
     "graphql-tag": "^2.0.0",
@@ -120,7 +123,7 @@
     "@tanstack/react-router": "1.39.8",
     "@tanstack/react-table": "^8.9.1",
     "@tanstack/router-devtools": "^1.39.8",
-    "@tanstack/router-vite-plugin": "^1.39.8",
+    "@tanstack/router-plugin": "^1.39.8",
     "@tanstack/zod-form-adapter": "^0.20.2",
     "@uppy/aws-s3": "^3.6.2",
     "@uppy/core": "^3.12.0",
