--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@modyfi/vite-plugin-yaml": "^1.1.0",
     "@ngneat/falso": "^6.4.0",
-    "@tanstack/router-plugin": "^1.39.9",
+    "@tanstack/router-plugin": "^1.39.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -106,10 +106,9 @@
     "@stripe/stripe-js": "^2.1.1",
     "@tanstack/react-form": "^0.23.3",
     "@tanstack/react-query": "^4.29.7",
-    "@tanstack/react-router": "1.39.8",
+    "@tanstack/react-router": "^1.40.0",
     "@tanstack/react-table": "^8.9.1",
     "@tanstack/router-devtools": "^1.39.8",
-    "@tanstack/router-plugin": "^1.39.8",
     "@tanstack/zod-form-adapter": "^0.23.3",
     "@uppy/aws-s3": "^3.6.2",
     "@uppy/core": "^3.12.0",
@@ -123,7 +122,6 @@
     "@visx/shape": "^3.3.0",
     "@visx/tooltip": "^3.3.0",
     "@visx/vendor": "^3.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
     "@xstate/react": "^3.2.1",
     "apollo-upload-client": "^17.0.0",
     "blurhash": "^2.0.5",
