--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@graphql-codegen/typescript": "^3.0.4",
     "@graphql-codegen/typescript-operations": "^3.0.4",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@ladle/react": "^4.1.0",
     "@modyfi/vite-plugin-yaml": "^1.1.0",
     "@ngneat/falso": "^6.4.0",
     "@tanstack/router-plugin": "^1.39.13",
