--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/raygun4js": "^2.13.8",
     "@types/react": "^18.0.32",
     "@types/react-dom": "^18.0.11",
+    "@types/react-highlight-words": "^0.20.0",
     "@types/tinycolor2": "^1.4.3",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "canvas": "^2.11.2",
@@ -68,13 +69,14 @@
     "stylelint-order": "^6.0.3",
     "stylelint-use-nesting": "^4.1.0",
     "typescript": "^5.0.3",
+    "typescript-plugin-css-modules": "^5.1.0",
     "unplugin-fonts": "^1.1.1",
     "vite": "^5.3.1",
     "vite-plugin-ruby": "^5.0.0",
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.11",
+    "@apollo/client": "^3.10.8",
     "@chakra-ui/portal": "^2.0.16",
     "@contentful/rich-text-react-renderer": "^15.16.3",
     "@ctrl/tinycolor": "^3.6.0",
@@ -102,6 +104,7 @@
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.3",
+    "@radix-ui/themes": "^3.1.1",
     "@rails/actioncable": "^7.0.6",
     "@stripe/react-stripe-js": "^2.1.2",
     "@stripe/stripe-js": "^2.1.1",
@@ -146,7 +149,9 @@
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.43.9",
+    "react-hotkeys-hook": "^4.5.0",
     "react-markdown": "^8.0.7",
     "react-merge-refs": "^2.0.1",
     "react-remove-scroll": "^2.5.6",
@@ -155,7 +160,8 @@
     "remark-smartypants": "^2.0.0",
     "simplex-noise": "^4.0.1",
     "tinycolor2": "^1.6.0",
-    "usehooks-ts": "^2.9.1",
+    "ts-key-enum": "^2.0.12",
+    "usehooks-ts": "^3.1.0",
     "utility-types": "^3.10.0",
     "xstate": "^4.37.1",
     "zod": "^3.23.8"
