--- a/package.json
+++ b/package.json
@@ -104,6 +104,8 @@
     "@mantine/notifications": "^7.10.1",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-popper": "^1.2.0",
     "@radix-ui/react-toggle-group": "^1.0.3",
     "@radix-ui/themes": "^3.1.1",
     "@rails/actioncable": "^7.0.6",
