--- a/package.json
+++ b/package.json
@@ -103,10 +103,22 @@
     "@mantine/modals": "^7.10.1",
     "@mantine/notifications": "^7.10.1",
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/primitive": "^1.1.0",
+    "@radix-ui/react-compose-refs": "^1.1.0",
+    "@radix-ui/react-context": "^1.1.0",
     "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-dismissable-layer": "^1.1.0",
+    "@radix-ui/react-focus-guards": "^1.1.0",
+    "@radix-ui/react-focus-scope": "^1.1.0",
+    "@radix-ui/react-id": "^1.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-popper": "^1.2.0",
+    "@radix-ui/react-portal": "^1.1.1",
+    "@radix-ui/react-presence": "^1.1.0",
+    "@radix-ui/react-primitive": "^2.0.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.0.3",
+    "@radix-ui/react-use-controllable-state": "^1.1.0",
     "@radix-ui/themes": "^3.1.1",
     "@rails/actioncable": "^7.0.6",
     "@stripe/react-stripe-js": "^2.1.2",
@@ -131,6 +143,7 @@
     "@visx/vendor": "^3.3.0",
     "@xstate/react": "^3.2.1",
     "apollo-upload-client": "^17.0.0",
+    "aria-hidden": "^1.2.4",
     "blurhash": "^2.0.5",
     "clsx": "^1.2.1",
     "country-list": "^2.3.0",
