--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "@mantine/notifications": "^7.10.1",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/primitive": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-compose-refs": "^1.1.0",
     "@radix-ui/react-context": "^1.1.0",
     "@radix-ui/react-dialog": "^1.0.3",
