--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "country-list": "^2.3.0",
     "dayjs": "^1.11.10",
     "framer-motion": "11.0.6",
+    "fuse.js": "^7.0.0",
     "gql.tada": "^1.7.5",
     "graphql": "^16.6.0",
     "graphql-ruby-client": "^1.11.8",
@@ -164,6 +165,7 @@
     "react": "^18.2.0",
     "react-balanced": "^0.0.1",
     "react-blurhash": "^0.3.0",
+    "react-circle-flags": "^0.0.20",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
