--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "prop-types": "^15.8.1",
     "resize-observer-polyfill": "^1.5.1",
     "stylelint": "^15.4.0",
+    "stylelint-config-css-modules": "^4.4.0",
     "stylelint-config-hudochenkov": "^9.0.0",
     "stylelint-config-standard": "^32.0.0",
     "stylelint-order": "^6.0.3",
