activity details page

--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@ladle/react": "^4.1.0",
     "@modyfi/vite-plugin-yaml": "^1.1.0",
-    "@ngneat/falso": "^6.4.0",
     "@tanstack/router-plugin": "^1.39.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -64,11 +63,11 @@
     "prettier": "^2.8.7",
     "prop-types": "^15.8.1",
     "resize-observer-polyfill": "^1.5.1",
-    "stylelint": "^15.4.0",
+    "stylelint": "^16.0.2",
     "stylelint-config-css-modules": "^4.4.0",
-    "stylelint-config-hudochenkov": "^9.0.0",
-    "stylelint-config-standard": "^32.0.0",
-    "stylelint-order": "^6.0.3",
+    "stylelint-config-hudochenkov": "^10.0.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-order": "^6.0.4",
     "stylelint-use-nesting": "^4.1.0",
     "typescript": "^5.5.3",
     "typescript-plugin-css-modules": "^5.1.0",
@@ -103,6 +102,7 @@
     "@mantine/hooks": "^7.10.1",
     "@mantine/modals": "^7.10.1",
     "@mantine/notifications": "^7.10.1",
+    "@ngneat/falso": "^6.4.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/primitive": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -119,6 +119,7 @@
     "@radix-ui/react-presence": "^1.1.0",
     "@radix-ui/react-primitive": "^2.0.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle-group": "^1.0.3",
     "@radix-ui/react-use-controllable-state": "^1.1.0",
     "@radix-ui/themes": "^3.1.1",
@@ -151,6 +152,7 @@
     "cmdk": "^1.0.0",
     "country-list": "^2.3.0",
     "dayjs": "^1.11.10",
+    "es-toolkit": "^1.10.1",
     "framer-motion": "11.0.6",
     "fuse.js": "^7.0.0",
     "gql.tada": "^1.7.5",
