--- a/package.json
+++ b/package.json
@@ -58,15 +58,14 @@
     "postcss-import-ext-glob": "^2.1.1",
     "postcss-jit-props": "^1.0.13",
     "postcss-nested": "^6.0.1",
-    "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^2.8.7",
     "prop-types": "^15.8.1",
     "resize-observer-polyfill": "^1.5.1",
-    "stylelint": "^16.0.2",
-    "stylelint-config-css-modules": "^4.4.0",
-    "stylelint-config-hudochenkov": "^10.0.0",
-    "stylelint-config-standard": "^36.0.1",
+    "stylelint": "^15.11.0",
+    "stylelint-config-css-modules": "4.2.0",
+    "stylelint-config-hudochenkov": "9.0.0",
+    "stylelint-config-standard": "34.0.0",
     "stylelint-order": "^6.0.4",
     "stylelint-use-nesting": "^4.1.0",
     "typescript": "^5.5.3",
@@ -97,11 +96,6 @@
     "@lexical/rich-text": "^0.16.0",
     "@lexical/selection": "^0.16.0",
     "@lexical/utils": "^0.16.0",
-    "@mantine/core": "^7.10.1",
-    "@mantine/dates": "^7.10.1",
-    "@mantine/hooks": "^7.10.1",
-    "@mantine/modals": "^7.10.1",
-    "@mantine/notifications": "^7.10.1",
     "@ngneat/falso": "^6.4.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/primitive": "^1.1.0",
