--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/country-list": "^2.1.4",
     "@types/lodash-es": "^4.17.7",
     "@types/luxon": "^3.2.0",
+    "@types/mapbox-gl": "^3.1.0",
     "@types/pluralize": "^0.0.29",
     "@types/rails__actioncable": "^6.1.6",
     "@types/raygun4js": "^2.13.8",
@@ -157,6 +158,7 @@
     "lexical": "^0.16.0",
     "lodash-es": "^4.17.21",
     "luxon": "^3.3.0",
+    "mapbox-gl": "^3.5.2",
     "pluralize": "^8.0.0",
     "raygun4js": "^2.27.0",
     "react": "^18.2.0",
