--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@vitejs/plugin-react-swc": "^3.7.0",
     "canvas": "^2.11.2",
     "fishery": "^2.2.2",
+    "graphql-language-service-server": "^2.13.2",
     "graphql-tag": "^2.0.0",
     "hygen": "^6.2.11",
     "intersection-observer": "^0.12.2",
