--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
     "react": "^18.2.0",
     "react-balanced": "^0.0.1",
     "react-blurhash": "^0.3.0",
+    "react-canvas-confetti": "^2.0.7",
     "react-circle-flags": "^0.0.20",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
