--- a/package.json
+++ b/package.json
@@ -178,6 +178,7 @@
     "react-remove-scroll": "^2.5.6",
     "react-router-dom": "^6.10.0",
     "react-router-typesafe-routes": "^1.2.1",
+    "recharts": "^2.12.7",
     "remark-smartypants": "^2.0.0",
     "simplex-noise": "^4.0.1",
     "tinycolor2": "^1.6.0",
