cope with multi-slot sessions in allocation algorithm

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -67,6 +67,9 @@ Metrics/MethodLength:
   Exclude:
     - 'db/migrate/*'
 
+Metrics/PerceivedComplexity:
+  Max: 10
+
 RSpec/ContextWording:
   Enabled: false
 
