--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -70,6 +70,9 @@ Metrics/MethodLength:
 Metrics/PerceivedComplexity:
   Max: 10
 
+Rails/I18nLocaleTexts:
+  Enabled: false
+
 RSpec/ContextWording:
   Enabled: false
 
